Camera lost from scene #38800

Closed
opened 2014-02-24 10:51:05 +01:00 by Cenek Strichel · 6 comments

System Information
Win 7 x64

Blender Version
01645cc

Short description of error
Camera is gone under duplication

Exact steps for others to reproduce the error

  1. Open my scene: LOST.blend
  2. duplicate camera with name: projekce tank (it is camera for projection)
  3. select Cube and set in UV project modifier projector to new copied camera (projekce tank.001)
  4. save scene
  5. after open, is first camera gone with error dialog
**System Information** Win 7 x64 **Blender Version** 01645cc **Short description of error** Camera is gone under duplication **Exact steps for others to reproduce the error** 1) Open my scene: [LOST.blend](https://archive.blender.org/developer/F78715/LOST.blend) 2) duplicate camera with name: projekce tank (it is camera for projection) 3) select Cube and set in UV project modifier projector to new copied camera (projekce tank.001) 4) save scene 5) after open, is first camera gone with error dialog
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Cenda

Added subscriber: @Cenda
Campbell Barton self-assigned this 2014-02-24 11:33:58 +01:00

This issue was referenced by blender/blender-addons-contrib@7078fb936a

This issue was referenced by blender/blender-addons-contrib@7078fb936ab756c4741a56ba6036e33513bf02d3

This issue was referenced by 7078fb936a

This issue was referenced by 7078fb936ab756c4741a56ba6036e33513bf02d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7078fb936a.

Closed by commit 7078fb936a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38800
No description provided.