Fix T38800: Setting UV projector caused zero user objects

Don't change user count when setting modifier objects